fix overflow

--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,7 @@ body {
     display: flex;
     flex-direction: column;
     overflow-x: hidden;
+    
 }
 
 /* ----------------/ NAV /------------------ */
@@ -148,6 +149,7 @@ header {
     width: 100%;
     height: 86vh;
     position: relative;
+    overflow-x: hidden;
 }
 
 .header_container {
@@ -284,13 +286,14 @@ main {
     width: 100%;
     height: 500vh;
     background-color: #f1f1f1;
-
+    overflow-x: hidden;
 }
 
 section {
     width: 100%;
     height: 100vh;
     background-color: #f1f1f1;
+    overflow-x: hidden;
 }
 
 /* ----------------/ first section /------------------ */
